@@ -1,3 +1,8 @@
+2005-01-28  Peter Debackere  <Peter.Debackere@UGent.be>
+
+	* camfr_wrap.cpp: Add switches for ASR solver.
+	* defs.h: Ditto.
+
 2004-10-18  Peter Bienstman  <Peter.Bienstman@UGent.be>
 
 	* geometry.py: Add switch to calculate average eps and 1/eps.
